docs/api/qiskit/0.28/qiskit.algorithms.optimizers.L_BFGS_B.mdx
---
title: L_BFGS_B
description: API reference for qiskit.algorithms.optimizers.L_BFGS_B
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.optimizers.L_BFGS_B
---

# qiskit.algorithms.optimizers.L\_BFGS\_B

<Class id="qiskit.algorithms.optimizers.L_BFGS_B" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.18/qiskit/algorithms/optimizers/l_bfgs_b.py" signature="L_BFGS_B(maxfun=1000, maxiter=15000, ftol=2.220446049250313e-15, factr=None, iprint=- 1, epsilon=1e-08, eps=1e-08, options=None, max_evals_grouped=1, **kwargs)" modifiers="class">
  Limited-memory BFGS Bound optimizer.

  The target goal of Limited-memory Broyden-Fletcher-Goldfarb-Shanno Bound (L-BFGS-B) is to minimize the value of a differentiable scalar function $f$. This optimizer is a quasi-Newton method, meaning that, in contrast to Newtons’s method, it does not require $f$’s Hessian (the matrix of $f$’s second derivatives) when attempting to compute $f$’s minimum value.

  Like BFGS, L-BFGS is an iterative method for solving unconstrained, non-linear optimization problems, but approximates BFGS using a limited amount of computer memory. L-BFGS starts with an initial estimate of the optimal value, and proceeds iteratively to refine that estimate with a sequence of better estimates.

  The derivatives of $f$ are used to identify the direction of steepest descent, and also to form an estimate of the Hessian matrix (second derivative) of $f$. L-BFGS-B extends L-BFGS to handle simple, per-variable bound constraints.

  Uses scipy.optimize.fmin\_l\_bfgs\_b. For further detail, please refer to [https://docs.scipy.org/doc/scipy/reference/optimize.minimize-lbfgsb.html](https://docs.scipy.org/doc/scipy/reference/optimize.minimize-lbfgsb.html)

  **Parameters**

  *   **maxfun** (`int`) – Maximum number of function evaluations.
  *   **maxiter** (`int`) – Maximum number of iterations.
  *   **ftol** (`float`) – The iteration stops when (f^k - f^\{k+1})/max\{|f^k|,|f^\{k+1}|,1} \<= ftol.
  *   **factr** (`Optional`\[`float`]) – (DEPRECATED) The iteration steps when (f^k - f^\{k+1})/max\{|f^k|, |f^\{k+1}|,1} \<= factr \* eps, where eps is the machine precision, which is automatically generated by the code. Typical values for factr are: 1e12 for low accuracy; 1e7 for moderate accuracy; 10.0 for extremely high accuracy. See Notes for relationship to ftol, which is exposed (instead of factr) by the scipy.optimize.minimize interface to L-BFGS-B.
  *   **iprint** (`int`) – Controls the frequency of output. iprint \< 0 means no output; iprint = 0 print only one line at the last iteration; 0 \< iprint \< 99 print also f and |proj g| every iprint iterations; iprint = 99 print details of every iteration except n-vectors; iprint = 100 print also the changes of active set and final x; iprint > 100 print details of every iteration including x and g.
  *   **eps** (`float`) – If jac is approximated, use this value for the step size.
  *   **epsilon** (`float`) – (DEPRECATED) Step size used when approx\_grad is True, for numerically calculating the gradient
  *   **options** (`Optional`\[`dict`]) – A dictionary of solver options.
  *   **max\_evals\_grouped** (`int`) – Max number of default gradient evaluations performed simultaneously.
  *   **kwargs** – additional kwargs for scipy.optimize.minimize.

  ### \_\_init\_\_

  <Function id="qiskit.algorithms.optimizers.L_BFGS_B.__init__" signature="__init__(maxfun=1000, maxiter=15000, ftol=2.220446049250313e-15, factr=None, iprint=- 1, epsilon=1e-08, eps=1e-08, options=None, max_evals_grouped=1, **kwargs)">
    **Parameters**

    *   **maxfun** (`int`) – Maximum number of function evaluations.
    *   **maxiter** (`int`) – Maximum number of iterations.
    *   **ftol** (`float`) – The iteration stops when (f^k - f^\{k+1})/max\{|f^k|,|f^\{k+1}|,1} \<= ftol.
    *   **factr** (`Optional`\[`float`]) – (DEPRECATED) The iteration steps when (f^k - f^\{k+1})/max\{|f^k|, |f^\{k+1}|,1} \<= factr \* eps, where eps is the machine precision, which is automatically generated by the code. Typical values for factr are: 1e12 for low accuracy; 1e7 for moderate accuracy; 10.0 for extremely high accuracy. See Notes for relationship to ftol, which is exposed (instead of factr) by the scipy.optimize.minimize interface to L-BFGS-B.
    *   **iprint** (`int`) – Controls the frequency of output. iprint \< 0 means no output; iprint = 0 print only one line at the last iteration; 0 \< iprint \< 99 print also f and |proj g| every iprint iterations; iprint = 99 print details of every iteration except n-vectors; iprint = 100 print also the changes of active set and final x; iprint > 100 print details of every iteration including x and g.
    *   **eps** (`float`) – If jac is approximated, use this value for the step size.
    *   **epsilon** (`float`) – (DEPRECATED) Step size used when approx\_grad is True, for numerically calculating the gradient
    *   **options** (`Optional`\[`dict`]) – A dictionary of solver options.
    *   **max\_evals\_grouped** (`int`) – Max number of default gradient evaluations performed simultaneously.
    *   **kwargs** – additional kwargs for scipy.optimize.minimize.
  </Function>

  ## Methods

  |                                                                                                                                                                        |                                                                                                           |
  | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.algorithms.optimizers.L_BFGS_B.__init__ "qiskit.algorithms.optimizers.L_BFGS_B.__init__")(\[maxfun, maxiter, ftol, factr, …])                     | **type maxfun**`int`                                                                                      |
  | [`get_support_level`](#qiskit.algorithms.optimizers.L_BFGS_B.get_support_level "qiskit.algorithms.optimizers.L_BFGS_B.get_support_level")()                            | Return support level dictionary                                                                           |
  | [`gradient_num_diff`](#qiskit.algorithms.optimizers.L_BFGS_B.gradient_num_diff "qiskit.algorithms.optimizers.L_BFGS_B.gradient_num_diff")(x\_center, f, epsilon\[, …]) | We compute the gradient with the numeric differentiation in the parallel way, around the point x\_center. |
  | [`optimize`](#qiskit.algorithms.optimizers.L_BFGS_B.optimize "qiskit.algorithms.optimizers.L_BFGS_B.optimize")(num\_vars, objective\_function\[, …])                   | Perform optimization.                                                                                     |
  | [`print_options`](#qiskit.algorithms.optimizers.L_BFGS_B.print_options "qiskit.algorithms.optimizers.L_BFGS_B.print_options")()                                        | Print algorithm-specific options.                                                                         |
  | [`set_max_evals_grouped`](#qiskit.algorithms.optimizers.L_BFGS_B.set_max_evals_grouped "qiskit.algorithms.optimizers.L_BFGS_B.set_max_evals_grouped")(limit)           | Set max evals grouped                                                                                     |
  | [`set_options`](#qiskit.algorithms.optimizers.L_BFGS_B.set_options "qiskit.algorithms.optimizers.L_BFGS_B.set_options")(\*\*kwargs)                                    | Sets or updates values in the options dictionary.                                                         |
  | [`wrap_function`](#qiskit.algorithms.optimizers.L_BFGS_B.wrap_function "qiskit.algorithms.optimizers.L_BFGS_B.wrap_function")(function, args)                          | Wrap the function to implicitly inject the args at the call of the function.                              |

  ## Attributes

  |                                                                                                                                                                         |                                                |
  | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------- |
  | [`bounds_support_level`](#qiskit.algorithms.optimizers.L_BFGS_B.bounds_support_level "qiskit.algorithms.optimizers.L_BFGS_B.bounds_support_level")                      | Returns bounds support level                   |
  | [`gradient_support_level`](#qiskit.algorithms.optimizers.L_BFGS_B.gradient_support_level "qiskit.algorithms.optimizers.L_BFGS_B.gradient_support_level")                | Returns gradient support level                 |
  | [`initial_point_support_level`](#qiskit.algorithms.optimizers.L_BFGS_B.initial_point_support_level "qiskit.algorithms.optimizers.L_BFGS_B.initial_point_support_level") | Returns initial point support level            |
  | [`is_bounds_ignored`](#qiskit.algorithms.optimizers.L_BFGS_B.is_bounds_ignored "qiskit.algorithms.optimizers.L_BFGS_B.is_bounds_ignored")                               | Returns is bounds ignored                      |
  | [`is_bounds_required`](#qiskit.algorithms.optimizers.L_BFGS_B.is_bounds_required "qiskit.algorithms.optimizers.L_BFGS_B.is_bounds_required")                            | Returns is bounds required                     |
  | [`is_bounds_supported`](#qiskit.algorithms.optimizers.L_BFGS_B.is_bounds_supported "qiskit.algorithms.optimizers.L_BFGS_B.is_bounds_supported")                         | Returns is bounds supported                    |
  | [`is_gradient_ignored`](#qiskit.algorithms.optimizers.L_BFGS_B.is_gradient_ignored "qiskit.algorithms.optimizers.L_BFGS_B.is_gradient_ignored")                         | Returns is gradient ignored                    |
  | [`is_gradient_required`](#qiskit.algorithms.optimizers.L_BFGS_B.is_gradient_required "qiskit.algorithms.optimizers.L_BFGS_B.is_gradient_required")                      | Returns is gradient required                   |
  | [`is_gradient_supported`](#qiskit.algorithms.optimizers.L_BFGS_B.is_gradient_supported "qiskit.algorithms.optimizers.L_BFGS_B.is_gradient_supported")                   | Returns is gradient supported                  |
  | [`is_initial_point_ignored`](#qiskit.algorithms.optimizers.L_BFGS_B.is_initial_point_ignored "qiskit.algorithms.optimizers.L_BFGS_B.is_initial_point_ignored")          | Returns is initial point ignored               |
  | [`is_initial_point_required`](#qiskit.algorithms.optimizers.L_BFGS_B.is_initial_point_required "qiskit.algorithms.optimizers.L_BFGS_B.is_initial_point_required")       | Returns is initial point required              |
  | [`is_initial_point_supported`](#qiskit.algorithms.optimizers.L_BFGS_B.is_initial_point_supported "qiskit.algorithms.optimizers.L_BFGS_B.is_initial_point_supported")    | Returns is initial point supported             |
  | [`setting`](#qiskit.algorithms.optimizers.L_BFGS_B.setting "qiskit.algorithms.optimizers.L_BFGS_B.setting")                                                             | Return setting                                 |
  | [`settings`](#qiskit.algorithms.optimizers.L_BFGS_B.settings "qiskit.algorithms.optimizers.L_BFGS_B.settings")                                                          | The optimizer settings in a dictionary format. |

  ## Members list

  ### bounds\_support\_level

  <Attribute id="qiskit.algorithms.optimizers.L_BFGS_B.bounds_support_level">
    Returns bounds support level
  </Attribute>

  ### get\_support\_level

  <Function id="qiskit.algorithms.optimizers.L_BFGS_B.get_support_level" signature="get_support_level()">
    Return support level dictionary
  </Function>

  ### gradient\_num\_diff

  <Function id="qiskit.algorithms.optimizers.L_BFGS_B.gradient_num_diff" signature="gradient_num_diff(x_center, f, epsilon, max_evals_grouped=1)" modifiers="static">
    We compute the gradient with the numeric differentiation in the parallel way, around the point x\_center.

    **Parameters**

    *   **x\_center** (*ndarray*) – point around which we compute the gradient
    *   **f** (*func*) – the function of which the gradient is to be computed.
    *   **epsilon** (*float*) – the epsilon used in the numeric differentiation.
    *   **max\_evals\_grouped** (*int*) – max evals grouped

    **Returns**

    the gradient computed

    **Return type**

    grad
  </Function>

  ### gradient\_support\_level

  <Attribute id="qiskit.algorithms.optimizers.L_BFGS_B.gradient_support_level">
    Returns gradient support level
  </Attribute>

  ### initial\_point\_support\_level

  <Attribute id="qiskit.algorithms.optimizers.L_BFGS_B.initial_point_support_level">
    Returns initial point support level
  </Attribute>

  ### is\_bounds\_ignored

  <Attribute id="qiskit.algorithms.optimizers.L_BFGS_B.is_bounds_ignored">
    Returns is bounds ignored
  </Attribute>

  ### is\_bounds\_required

  <Attribute id="qiskit.algorithms.optimizers.L_BFGS_B.is_bounds_required">
    Returns is bounds required
  </Attribute>

  ### is\_bounds\_supported

  <Attribute id="qiskit.algorithms.optimizers.L_BFGS_B.is_bounds_supported">
    Returns is bounds supported
  </Attribute>

  ### is\_gradient\_ignored

  <Attribute id="qiskit.algorithms.optimizers.L_BFGS_B.is_gradient_ignored">
    Returns is gradient ignored
  </Attribute>

  ### is\_gradient\_required

  <Attribute id="qiskit.algorithms.optimizers.L_BFGS_B.is_gradient_required">
    Returns is gradient required
  </Attribute>

  ### is\_gradient\_supported

  <Attribute id="qiskit.algorithms.optimizers.L_BFGS_B.is_gradient_supported">
    Returns is gradient supported
  </Attribute>

  ### is\_initial\_point\_ignored

  <Attribute id="qiskit.algorithms.optimizers.L_BFGS_B.is_initial_point_ignored">
    Returns is initial point ignored
  </Attribute>

  ### is\_initial\_point\_required

  <Attribute id="qiskit.algorithms.optimizers.L_BFGS_B.is_initial_point_required">
    Returns is initial point required
  </Attribute>

  ### is\_initial\_point\_supported

  <Attribute id="qiskit.algorithms.optimizers.L_BFGS_B.is_initial_point_supported">
    Returns is initial point supported
  </Attribute>

  ### optimize

  <Function id="qiskit.algorithms.optimizers.L_BFGS_B.optimize" signature="optimize(num_vars, objective_function, gradient_function=None, variable_bounds=None, initial_point=None)">
    Perform optimization.

    **Parameters**

    *   **num\_vars** (*int*) – Number of parameters to be optimized.
    *   **objective\_function** (*callable*) – A function that computes the objective function.
    *   **gradient\_function** (*callable*) – A function that computes the gradient of the objective function, or None if not available.
    *   **variable\_bounds** (*list\[(float, float)]*) – List of variable bounds, given as pairs (lower, upper). None means unbounded.
    *   **initial\_point** (*numpy.ndarray\[float]*) – Initial point.

    **Returns**

    **point, value, nfev**

    point: is a 1D numpy.ndarray\[float] containing the solution value: is a float with the objective function value nfev: number of objective function calls made if available or None

    **Raises**

    **ValueError** – invalid input
  </Function>

  ### print\_options

  <Function id="qiskit.algorithms.optimizers.L_BFGS_B.print_options" signature="print_options()">
    Print algorithm-specific options.
  </Function>

  ### set\_max\_evals\_grouped

  <Function id="qiskit.algorithms.optimizers.L_BFGS_B.set_max_evals_grouped" signature="set_max_evals_grouped(limit)">
    Set max evals grouped
  </Function>

  ### set\_options

  <Function id="qiskit.algorithms.optimizers.L_BFGS_B.set_options" signature="set_options(**kwargs)">
    Sets or updates values in the options dictionary.

    The options dictionary may be used internally by a given optimizer to pass additional optional values for the underlying optimizer/optimization function used. The options dictionary may be initially populated with a set of key/values when the given optimizer is constructed.

    **Parameters**

    **kwargs** (*dict*) – options, given as name=value.
  </Function>

  ### setting

  <Attribute id="qiskit.algorithms.optimizers.L_BFGS_B.setting">
    Return setting
  </Attribute>

  ### settings

  <Attribute id="qiskit.algorithms.optimizers.L_BFGS_B.settings">
    The optimizer settings in a dictionary format.

    The settings can for instance be used for JSON-serialization (if all settings are serializable, which e.g. doesn’t hold per default for callables), such that the optimizer object can be reconstructed as

    ```python
    settings = optimizer.settings
    # JSON serialize and send to another server
    optimizer = OptimizerClass(**settings)
    ```

    **Return type**

    `Dict`\[`str`, `Any`]
  </Attribute>

  ### wrap\_function

  <Function id="qiskit.algorithms.optimizers.L_BFGS_B.wrap_function" signature="wrap_function(function, args)" modifiers="static">
    Wrap the function to implicitly inject the args at the call of the function.

    **Parameters**

    *   **function** (*func*) – the target function
    *   **args** (*tuple*) – the args to be injected

    **Returns**

    wrapper

    **Return type**

    function\_wrapper
  </Function>
</Class>

